rename: dir `store` -> `setting`

--- a/setting/index.html
+++ b/setting/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Store | Deskor</title>
+    <title>Setting | Deskor</title>
   </head>
   <body>
     <div id="app" class="overflow-hidden rounded-md backdrop-blur"></div>
-    <script type="module" src="/store/main.js"></script>
+    <script type="module" src="/setting/main.js"></script>
   </body>
 </html>
